# background-file-mover

./: .gitattributes  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  sonarcloud.yml
config/: file-mover.ini
docs/: 12-FACTOR.md  ARCHITECTURE.md  CAPTURE.md  CLI-REFERENCE.md  CONFIG-REFERENCE.md  DEPLOYMENT.md  FEATURE-INTERACTIONS.md  L1-REQ.md  L2-REQ.md  L3-REQ.md  LOGGING.md  MAINTAINER-GUIDE.md  ROADMAP.md  TRACE-MATRIX.md  USER-GUIDE.md
packaging/systemd/: file-mover.service
scripts/: build-trace-matrix.py  coverage.sh  pytest-by-requirement.py
src/file_mover/: __init__.py  __main__.py  claiming.py  cli.py  configuration.py  constants.py  diagnostics.py  exceptions.py  logging_config.py  manifests.py  presentation.py  service.py  submission.py  systemd.py  validation.py
src/file_mover/control/: __init__.py  client.py  dispatcher.py  lifecycle.py  lock.py  protocol.py  server.py
src/file_mover/jobs/: __init__.py  models.py  repository.py  sqlite_repository.py
src/file_mover/recovery/: __init__.py  manager.py
src/file_mover/transfer/: __init__.py  control_signals.py  coordinator.py  copy_engine.py  file_mover.py  integrity.py  partials.py  ratelimit.py  retry.py  scheduler.py
tests/: test_cli.py  test_configuration.py  test_constants.py  test_control_integration.py  test_control_signals.py  test_control_unix.py  test_copy_engine.py  test_diagnostics.py  test_dispatcher.py  test_exceptions.py  test_fault_injection.py  test_fuzz.py  test_lifecycle.py  test_logging_config.py  test_models.py  test_package.py  test_protocol.py  test_ratelimit.py  test_recovery.py  test_repository.py  test_scheduler.py  test_service.py  test_submission.py  test_systemd.py  test_traceability_audit.py  test_transfer.py
